Rewrite README: cleaner structure, full changelog with rationale, accurate architecture, dual-mode docs